Fixed submenu not visible issue reported by Jacques in the ML
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@836136 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
+++ b/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
@@ -1279,6 +1279,7 @@ display: inline; /* IE Fix */
 float: left;
 font-weight: bold;
 padding: 0.1em 0.4em 0.1em 0.4em;
+background-color: #0099CC;
 }
 
 .button-bar ul .opposed {
